[SYNCOPE-1455] Cleaning up + more tests + some useful Filters