@@ -19,8 +19,10 @@
 package org.apache.syncope.sra;
 
 import java.time.ZonedDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
+import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.lang3.BooleanUtils;
@@ -33,13 +35,16 @@ import org.apache.syncope.common.keymaster.client.api.model.NetworkService;
 import org.apache.syncope.common.lib.to.GatewayRouteTO;
 import org.apache.syncope.common.lib.types.GatewayRouteFilter;
 import org.apache.syncope.common.lib.types.GatewayRoutePredicate;
-import org.apache.syncope.common.lib.types.GatewayRouteStatus;
 import org.apache.syncope.common.rest.api.service.GatewayRouteService;
+import org.apache.syncope.sra.filters.ClientCertsToRequestHeaderFilterFactory;
+import org.apache.syncope.sra.filters.CustomGatewayFilterFactory;
+import org.apache.syncope.sra.filters.LinkRewriteGatewayFilterFactory;
+import org.apache.syncope.sra.filters.QueryParamToRequestHeaderFilterFactory;
+import org.apache.syncope.sra.predicates.CustomRoutePredicateFactory;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.beans.factory.support.AbstractBeanDefinition;
 import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.cloud.gateway.filter.OrderedGatewayFilter;
 import org.springframework.cloud.gateway.filter.factory.AddRequestHeaderGatewayFilterFactory;
@@ -110,7 +115,7 @@ public class RouteProvider {
     private SyncopeClient client;
 
     @SuppressWarnings("unchecked")
-    private GatewayFilter toFilter(final String routeId, final GatewayRouteFilter gwfilter)
+    private GatewayFilter toFilter(final GatewayRouteTO route, final GatewayRouteFilter gwfilter)
             throws ClassNotFoundException {
 
         GatewayFilter filter;
@@ -140,7 +145,7 @@ public class RouteProvider {
             case HYSTRIX:
                 String[] hystrixArgs = gwfilter.getArgs().split(",");
                 filter = ctx.getBean(HystrixGatewayFilterFactory.class).
-                        apply(routeId, c -> {
+                        apply(route.getKey(), c -> {
                             if (StringUtils.isNotBlank(hystrixArgs[0])) {
                                 c.setName(hystrixArgs[0].trim());
                             }
@@ -285,17 +290,43 @@ public class RouteProvider {
                         apply(c -> c.setMaxSize(DataSize.ofBytes(Long.valueOf(gwfilter.getArgs().trim()))));
                 break;
 
+            case LINK_REWRITE:
+                filter = ApplicationContextUtils.getOrCreateBean(
+                        ctx,
+                        LinkRewriteGatewayFilterFactory.class.getName(),
+                        LinkRewriteGatewayFilterFactory.class).
+                        apply(c -> c.setData(route.getTarget().toASCIIString() + "," + gwfilter.getArgs().trim()));
+                break;
+
+            case CLIENT_CERTS_TO_REQUEST_HEADER:
+                String header = StringUtils.isBlank(gwfilter.getArgs()) ? "X-Client-Certificate" : gwfilter.getArgs();
+                filter = ApplicationContextUtils.getOrCreateBean(
+                        ctx,
+                        ClientCertsToRequestHeaderFilterFactory.class.getName(),
+                        ClientCertsToRequestHeaderFilterFactory.class).
+                        apply(c -> c.setName(header.trim()));
+                break;
+
+            case QUERY_PARAM_TO_REQUEST_HEADER:
+                filter = ApplicationContextUtils.getOrCreateBean(
+                        ctx,
+                        QueryParamToRequestHeaderFilterFactory.class.getName(),
+                        QueryParamToRequestHeaderFilterFactory.class).
+                        apply(c -> c.setName(gwfilter.getArgs().trim()));
+                break;
+
             case CUSTOM:
                 String[] customArgs = gwfilter.getArgs().split(";");
-                CustomGatewayFilterFactory factory;
-                if (ctx.getBeanFactory().containsSingleton(customArgs[0])) {
-                    factory = (CustomGatewayFilterFactory) ctx.getBeanFactory().getSingleton(customArgs[0]);
-                } else {
-                    factory = (CustomGatewayFilterFactory) ctx.getBeanFactory().
-                            createBean(Class.forName(customArgs[0]), AbstractBeanDefinition.AUTOWIRE_BY_TYPE, false);
-                    ctx.getBeanFactory().registerSingleton(customArgs[0], factory);
-                }
-                filter = factory.apply(c -> c.setData(customArgs[1]));
+                Consumer<CustomGatewayFilterFactory.Config> customConsumer = customArgs.length > 1
+                        ? c -> c.setData(customArgs[1])
+                        : c -> c.setData(null);
+                CustomGatewayFilterFactory factory = ApplicationContextUtils.getOrCreateBean(
+                        ctx,
+                        customArgs[0],
+                        CustomGatewayFilterFactory.class);
+                filter = factory.getOrder().
+                        map(order -> (GatewayFilter) new OrderedGatewayFilter(factory.apply(customConsumer), order)).
+                        orElseGet(() -> factory.apply(customConsumer));
                 break;
 
             default:
@@ -339,14 +370,16 @@ public class RouteProvider {
                 break;
 
             case HEADER:
+                String[] headerArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(HeaderRoutePredicateFactory.class).
-                        applyAsync(c -> c.setHeader(gwpredicate.getArgs().trim()));
+                        applyAsync(c -> c.setHeader(headerArgs[0].trim()).
+                        setRegexp(headerArgs[1].trim()));
                 break;
 
             case HOST:
                 String[] hostArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(HostRoutePredicateFactory.class).
-                        applyAsync(c -> c.setPatterns(List.of(hostArgs)));
+                        applyAsync(c -> c.setPatterns(Arrays.asList(hostArgs)));
                 break;
 
             case METHOD:
@@ -359,33 +392,32 @@ public class RouteProvider {
             case PATH:
                 String[] pathArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(PathRoutePredicateFactory.class).
-                        applyAsync(c -> c.setPatterns(List.of(pathArgs)));
+                        applyAsync(c -> c.setPatterns(Arrays.asList(pathArgs)));
                 break;
 
             case QUERY:
                 String[] queryArgs = gwpredicate.getArgs().split(",");
+                Consumer<QueryRoutePredicateFactory.Config> queryConsumer =
+                        queryArgs.length > 1
+                                ? c -> c.setParam(queryArgs[0].trim()).setRegexp(queryArgs[1].trim())
+                                : c -> c.setParam(queryArgs[0].trim());
                 predicate = ctx.getBean(QueryRoutePredicateFactory.class).
-                        applyAsync(c -> c.setParam(queryArgs[0].trim()).
-                        setRegexp(queryArgs[1].trim()));
+                        applyAsync(queryConsumer);
                 break;
 
             case REMOTE_ADDR:
                 String[] remoteAddrArgs = gwpredicate.getArgs().split(",");
                 predicate = ctx.getBean(RemoteAddrRoutePredicateFactory.class).
-                        applyAsync(c -> c.setSources(List.of(remoteAddrArgs)));
+                        applyAsync(c -> c.setSources(Arrays.asList(remoteAddrArgs)));
                 break;
 
             case CUSTOM:
                 String[] customArgs = gwpredicate.getArgs().split(";");
-                CustomRoutePredicateFactory factory;
-                if (ctx.getBeanFactory().containsSingleton(customArgs[0])) {
-                    factory = (CustomRoutePredicateFactory) ctx.getBeanFactory().getSingleton(customArgs[0]);
-                } else {
-                    factory = (CustomRoutePredicateFactory) ctx.getBeanFactory().
-                            createBean(Class.forName(customArgs[0]), AbstractBeanDefinition.AUTOWIRE_BY_TYPE, false);
-                    ctx.getBeanFactory().registerSingleton(customArgs[0], factory);
-                }
-                predicate = factory.applyAsync(c -> c.setData(customArgs[1]));
+                predicate = ApplicationContextUtils.getOrCreateBean(
+                        ctx,
+                        customArgs[0],
+                        CustomRoutePredicateFactory.class).
+                        applyAsync(c -> c.setData(customArgs[1]));
                 break;
 
             default:
@@ -393,13 +425,10 @@ public class RouteProvider {
         }
 
         if (predicate == null) {
-            throw new IllegalArgumentException("Could not translate " + gwpredicate);
+            throw new IllegalArgumentException("Could not translate predicate " + gwpredicate);
         }
 
-        if (negate) {
-            predicate.negate();
-        }
-        return predicate;
+        return negate ? predicate.negate() : predicate;
     }
 
     private Route.AsyncBuilder toRoute(final GatewayRouteTO gwroute) {
@@ -438,7 +467,7 @@ public class RouteProvider {
             builder.filters(gwroute.getFilters().stream().
                     map(gwfilter -> {
                         try {
-                            return toFilter(gwroute.getKey(), gwfilter);
+                            return toFilter(gwroute, gwfilter);
                         } catch (Exception e) {
                             LOG.error("Could not translate {}, skipping", gwfilter, e);
                             return null;
@@ -467,7 +496,6 @@ public class RouteProvider {
         }
 
         return client.getService(GatewayRouteService.class).list().stream().
-                filter(gwroute -> gwroute.getStatus() == GatewayRouteStatus.PUBLISHED).
                 map(this::toRoute).
                 collect(Collectors.toList());
     }
